syntax = "proto3";

option go_package = "github.com/dongsu8142/common/api";

package api;

service UserService {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
}

message RegisterUserRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message RegisterUserResponse {
    bool success = 1;
    string message = 2;
}